--- a/recipes/spag-bol.html
+++ b/recipes/spag-bol.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage</title>
+    <title>Spaghetti Bolognese</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/spag-bol.html">Spaghetti Bolognese</a>
+    <h1>Spaghetti Bolognese</h1>
+    <img src="../images/spag-bol.jpeg">
 </body>
 </html>
