--- a/recipes/spag-bol.html
+++ b/recipes/spag-bol.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spaghetti Bolognese</title>
+    
 </head>
+
 <body>
+
     <h1>Spaghetti Bolognese</h1>
-    <img src="../images/spag-bol.jpeg">
+        <img src="../images/spag-bol.jpeg">
+
+    <h3>Description</h3>
+        <p>Beef mince in tomato sauce with carrots and celery on a bed of pasta</p>
+
 </body>
 </html>
