--- a/recipes/spag-bol.html
+++ b/recipes/spag-bol.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spaghetti Bolognese</title>
-    
+
 </head>
 
 <body>
@@ -16,7 +16,7 @@
         <img src="../images/spag-bol.jpeg">
 
     <h3>Description</h3>
-        <p>Beef mince in tomato sauce with carrots and celery on a bed of pasta</p>
+        <p>Beef mince in tomato sauce with carrots and celery on a bed of pasta.</p>
 
 </body>
 </html>
