Add recipe ingredients

--- a/recipes/spag-bol.html
+++ b/recipes/spag-bol.html
@@ -17,6 +17,22 @@
 
     <h3>Description</h3>
         <p>Beef mince in tomato sauce with carrots and celery on a bed of pasta.</p>
-
+    
+    <h3>Ingredients</h3>
+        <ul>
+            <li>Pasta</li>
+            <li>Beef mince</li>
+            <li>Red wine</li>
+            <li>Chicken Stock</li>
+            <li>Tomato pureé</li>
+            <li>Carrots</li>
+            <li>Celery</li>
+            <li>Onion</li>
+            <li>Rosemary</li>
+            <li>Basil</li>
+            <li>Salt</li>
+            <li>Pepper</li>
+            <li>Milk</li>
+        </ul>
 </body>
 </html>
