--- a/recipes/spag-bol.html
+++ b/recipes/spag-bol.html
@@ -34,5 +34,12 @@
             <li>Pepper</li>
             <li>Milk</li>
         </ul>
+
+    <h3>Steps</h3>
+        <ol>
+            <li>Add the beef,onion, carrot and celery to a pan and fry off all the juices</li>
+            <li>Add red wine, once the alcohol is fried off and chicken stock, tomato pureé, rosemary, salt, pepper and milk and simmer for an hour and a half</li>
+            <li>cook the pasta and server when ready. Garnish with basil and season to taste</li>
+        </ol>
 </body>
 </html>
