Add Madras and Cheese pasta pages

--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 <body>
 
     <h1>Odin Recipes</h1>
-        <a href="recipes/spag-bol.html">Spaghetti Bolognese</a>
-        
+        <ul>
+            <li><a href="recipes/spag-bol.html">Spaghetti Bolognese</a></li>
+            <li><a href="recipes/madras.html">Madras</a></li>
+            <li><a href="recipes/cheese-pasta.html">Cheese pasta</a></li>
+        </ul>
+                
 </body>
 </html>
